Updating the download language.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="description">
                     <h2>Download</h2>
                     <p>
-                        Download the latest release of Glide.
+                        Download the latest release of Glide and, optionally, put it in your path.
                     </p>
                 </div>
                 <div class="detail">
