Added more details about next steps and the project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <h1><a href="/" title="Glide">Glide</a></h1>
         <nav>
           <ul>
+              <li>
+                <a href="https://github.com/Masterminds/glide/releases">v0.9.1</a>
+              </li>
             <li>
               <a href="https://glide.readthedocs.org">Documentation</a>
             </li>
@@ -132,6 +135,23 @@ $ glide get github.com/foo/bar
                   <pre><code>
 $ glide get github.com/foo/bar#^1.2.3
                   </code></pre>
+              </div>
+          </div>
+          <div class="row divider">
+              <div class="description">
+                  <h2>Next Steps</h2>
+                  <ul>
+                      <li><a href="http://glide.readthedocs.org/en/latest/vendor/">Find out how vendor directories work in Go</a></li>
+                      <li><a href="http://glide.readthedocs.org/en/latest/versions/">Learn the version and version range syntax</a></li>
+                      <li><a href="http://glide.readthedocs.org/en/latest/glide.yaml/">Read the syntax of the glide.yaml file</a></li>
+                  </ul>
+              </div>
+              <div class="description description-right">
+                  <h2>The Project</h2>
+                  <ul>
+                      <li>Contribute by filing an <a href="https://github.com/Masterminds/glide/issues">issue</a> or submitting a <a href="https://github.com/Masterminds/glide/pulls">pull request</a></li>
+                      <li>Connect on Freenode IRC in the <a href="https://www.irccloud.com/invite?channel=%23masterminds&amp;hostname=irc.freenode.net&amp;port=6697&amp;ssl=1">#masterminds</a> room</li>
+                  </ul>
               </div>
           </div>
         </div>
