--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav>
           <ul>
               <li>
-                <a href="https://github.com/Masterminds/glide/releases">v0.10.0</a>
+                <a href="https://github.com/Masterminds/glide/releases">v0.10.1</a>
               </li>
             <li>
               <a href="https://glide.readthedocs.org">Documentation</a>
@@ -43,7 +43,7 @@
         <img src="/assets/logo-small.png"><br>
         <h2>Package Management for Go</h2>
         <p>Semantic Versions and Ranges &bull; Git, Bzr, Hg, Svn &bull; Works with Go toolchain<br>
-        Leverages vendor directory &bull; Imports from Godep, GB, GPM &bull; Private Repos and Forks</p>
+        Leverages vendor directory &bull; Imports from Godep, GB, GPM, Gom &bull; Private Repos and Forks</p>
     </div>
     <div id="content">
         <div class="wrapper">
