--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ $ glide get github.com/foo/bar#^1.2.3
                   <h2>The Project</h2>
                   <ul>
                       <li>Contribute by filing an <a href="https://github.com/Masterminds/glide/issues">issue</a> or submitting a <a href="https://github.com/Masterminds/glide/pulls">pull request</a></li>
-                      <li>Connect and chat on <a href="gitter.im/Masterminds/glide"></a>Gitter</a></li>
+                      <li>Connect and chat on <a href="gitter.im/Masterminds/glide">Gitter</a></li>
                   </ul>
               </div>
           </div>
