Fix typo in glide.lock link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $ edit glide.yaml
                       directory matching the version resolution information.
                       The complete dependency tree is installed, importing Glide,
                       Godep, GB, and GPM configuration along the way. A
-                      <a href="http:s//glide.readthedocs.org/en/latest/glide.lock/">lock file</a> is created from the final output.
+                      <a href="https://glide.readthedocs.org/en/latest/glide.lock/">lock file</a> is created from the final output.
                   </p>
               </div>
               <div class="detail">
